# neuroutils

./: .gitignore  README.md  compute_attenuations.py  setup.cfg
examples/: Attenuation_comparison.ipynb  Attenuation_comparison_multibranch.ipynb  Dendritic_attenuation.ipynb  Morphologies.ipynb  SWC_Impedance_Tree.ipynb  Signal_attenuation.ipynb  a-thorny.json  thorny.json
examples/config/: a-thorny_attenuation.json  thorny_attenuation.json
examples/morphologies/: DH070213C3.swc  DH070813.swc
neuroutils/: __init__.py  nodes.py  tree.py  trees.py  ztree.py
neuroutils/test/: __init__.py  test_node.py  test_tree.py  test_znode.py
src/neuroutils/: __init__.py
